# protoperps

./: Anchor.toml  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/faq/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: Navbar.tsx  PageTransition.tsx  WalletButton.tsx
app/src/components/markets/: MarketsTable.tsx
app/src/components/portfolio/: DepositWithdraw.tsx  FaucetButton.tsx  MarginCard.tsx  PositionHistory.tsx
app/src/components/trade/: OpenOrders.tsx  OrderBook.tsx  OrderEntry.tsx  (+2 more)
app/src/hooks/: useDexStats.ts  useMarginAccount.ts  useMarket.ts  useOracle.ts  usePosition.ts  usePrograms.ts
app/src/lib/: constants.ts  math.ts  oracle.json  protoperps.json
app/src/providers/: SolanaProvider.tsx
docs/: PRD.md
keeper/: .env.example  package-lock.json  package.json  tsconfig.json
keeper/src/: config.ts  funding.ts  index.ts  liquidator.ts  marketmaker.ts  oracle.ts  set_leverage.ts  volumebot.ts
migrations/: deploy.ts
programs/oracle/: Cargo.toml
programs/oracle/src/: errors.rs  events.rs  lib.rs
programs/oracle/src/instructions/: admin_pause.rs  initialize_feed.rs  mod.rs  update_price.rs
programs/oracle/src/state/: enums.rs  mod.rs  oracle_price.rs
programs/protoperps/: Cargo.toml
programs/protoperps/src/: errors.rs  events.rs  lib.rs  oracle_client.rs
scripts/: setup-devnet.ts  tsconfig.json
tests/: protoperps.ts
(+24 files in other folders)
